# home_ai_reloaded_cmake

./: .gitignore  CMakeLists.txt  README.md  lbphFaceRecognizer.7z  run.sh
cmake/Modules/: FindEigen.cmake
headers/: Annotation.hpp  ClipsAdapter.hpp  VisualContextAnnotator.hpp  VisualREPL.hpp
headers/homeai/: ClipsAdapter.hpp
homeai/: ClipsAdapter.hpp  VisualContextAnnotator.hpp  VisualREPL.hpp
src/: ClipsAdapter.cpp  VisualContextAnnotator.cpp  home_ai_visual_repl.cpp
testbed/: home_ai_reloaded
